--- a/parking/templates/parking/parking_list.html
+++ b/parking/templates/parking/parking_list.html
@@ -4,9 +4,10 @@
     <style>
         .dot {
             height: 50px; width: 50px; background-color: #bbb; border-radius: 50%; display: inline-block;
+            padding: 10px; margin: 10px;
         }
-        .alloted { background-color: #c82333; color: whitesmoke;}
-        .empty { background-color: #218838; color: whitesmoke;}
+        /* .alloted { background-color: #c82333; color: whitesmoke;}
+        .empty { background-color: #218838; color: whitesmoke;} */
     </style>
     
     <div class="row text-center">
@@ -78,4 +79,18 @@
         </form>
         </div>
     </div>
+
+    <script type="text/javascript">
+        $(function () {
+            $('.datetimepicker1').datetimepicker({
+                // datepicker:false,
+                format:'Y-m-d H:i'
+            });
+
+            $('#id_date').datetimepicker({
+                timepicker:false,
+                format:'Y-m-d'
+            });
+        });
+    </script>
 {% endblock %}
